css/styles.css
:root {
    --main-text-color: white;
    --light-gray: rgba(245,245,245,255);
    --darker-gray: rgba(219,219,219,255);
    --secondary-color: rgba(129,201,143,255);
    --primary-color: rgba(116,119,191,255);
    scroll-behavior: smooth;
}

canvas {
    max-width: 100%;
}

/* Grid & FlexBox */
.grid-container {
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: auto;
    grid-template-areas: 
    "header"
    "navigation"
    "main";
}
.header {
    display: flex;
    grid-area: header;
    align-items: center;
    justify-content: flex-end;
    color: white;
}
.header h1 {
    margin-right: auto;
} 
.nav {
    grid-area: navigation;
    display: flex;
    justify-content: center;
    gap: 10%;
    padding: 1rem;
}
.main {
    display: grid;
    grid-area: main;
}

/* Base Styles */
body {
    font-family: 'Roboto', sans-serif;
}
h1, h2, h3, p {
    font-size: 1rem;
    font-weight: 400;
}
.title {
    padding: 0 1rem;
    text-transform: uppercase;
}
.member-img {
    width: 4rem;
    height: 4rem;
    border-radius: 50%;
    background-position: center;
}
a {
    text-decoration: none;
    color: var(--primary-color);
}
p {
    margin: 0;
    padding: 0;
    font-size: .9rem;
}
ul {
    list-style-type: none;
    padding: 0;
}
section {
    border-bottom: 1px solid grey;
}

/* SVG */
.bell {
    width: 1.3rem;
    height: 1.3rem;
    fill: var(--main-text-color);
    margin-top: .5rem;
    transition: fill .3s ease;
}
.bell:hover {
    fill: var(--secondary-color);
    cursor: pointer;
}
.notifications {
    background: var(--secondary-color);
    width: 5px;
    height: 5px;
    border-radius: 50%;
    position: relative;
    left: 15px;
    bottom: 30px;
}
.nav-svg {
    width: 1.9rem;
    height: 1.9rem;
    filter: invert(1);
}

/* Header */
.header {
    background-color: rgba(116,119,191,255);
    padding: 1rem;
    font-size: .8rem;
}
.title-bold {
    font-weight: 700;
}
.header h1 {
    font-size: 1.5rem;
}
.bell-container {
    border-right: 2px solid grey;
    padding: 1rem .8rem;
}
.header img {
    margin: 0 .5rem;
}
.header h3 {
    font-size: .7rem;
}

/* Nav */
.nav {
    background-color: rgba(77,76,114,255);
}

/* Main */
.main-header {
    display: flex;
    align-items: center;
}
.header-wrapper {
    width: 100%;
}
.main-header h2 {
    padding: 0 1rem;
}
.tab {
    background-color: rgba(247,247,247,255);
    height: 4rem;
    width: 100%;
    border-left: 2px solid var(--darker-gray);
    border-bottom: 2px solid var(--darker-gray);
}

/* Alert */
.alert {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}

.alert-banner {
    display: flex;
    background: rgba(116,119,191,255);
    padding: .8rem;
    width: 80%;
    border-radius: 5px;
    color: white;
    margin-top: 1rem;
}
.smoosh {
    margin-top: -10px;
}
.alert-banner p {
    font-size: .7rem;
}
.alert-banner-close {
    margin-left: auto;
    cursor: pointer;
}

/* Line graph */
.active {
    background: var(--secondary-color);
    color: white;
    padding: .5rem;
    border-radius: 20px;
}

.traffic-nav {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1rem;
}

.traffic-nav-link:hover {
    cursor: pointer;
}

/* Socials */
.social {
    display: flex;
    flex-direction: column;
}
.social-wrapper {
    background: var(--light-gray);
    width: 80%;
    display: flex;
    align-items: center;
    align-self: center;
    padding: 1rem;
    border-radius: 10px;
    border: 2px solid var(--darker-gray);
    margin: 0 auto;
}
.social-wrapper:nth-child(2) {
    margin-top: 1rem;
    margin-bottom: 1rem;
}
.social-image {
    width: 2.5rem;
    height: 2.5rem;
    padding: 1rem;
    border-radius: 50%;
    background: var(--primary-color);
    align-self: center;
}
.social-svg {
    fill: white;
}
.social-text {
    margin-left: 1rem;
}
.social-name {
    color: var(--primary-color)
}
.social-number {
    color: grey;
    font-size: 2rem;
}

/* Widgets */
.traffic-header {
    margin: 2rem 0 0 0;
}
.widget-container-full,
.widget-container-half {
    width: 95vw;
}
.widget-wrapper {
    display: flex;
    justify-content: center;
    margin-bottom: 1rem;
}

/* Members */
.members-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    text-align: center;
    border-bottom: 1px solid grey;
    width: 90%;
    margin: 0 auto;
    padding-bottom: 1rem;
}
.members-wrapper:nth-child(5) {
    border-bottom: none;
}
.members-container {
    margin-top: 1rem;
}
.members-date {
    margin-bottom: 1rem;
}
.bold {
    font-weight: bold;
}
.arrow {
    display: none;
}

/* Message */
.widget-container {
    display: flex;
    flex-direction: column;
    align-content: center;
    justify-content: center;
    max-width: 90%;
    margin: 0 auto;
}
input,
textarea,
.form-field {
    background-color: var(--light-gray);
    padding: 1rem;
    border-radius: 10px;
    border: 2px solid var(--darker-gray);
    font-size: .7rem;
    max-width: 100%;
}
::placeholder {
    color: var(--darker-gray);
}
textarea {
    margin: 1rem 0;
    height: 5rem;
}
.btn-primary {
    background-color: var(--primary-color);
    border: 2px solid var(--darker-gray);
    color: white;
    padding: 1rem;
    border-radius: 10px;
    text-transform: uppercase;
}
.btn-primary:active {
    background-color: rgba(77,76,114,255);
}
.btn-send {
    max-width: 100%;
    margin-bottom: 1rem;
}

/* Settings */
.toggle-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 90%;
    margin: 1.5rem auto;
}
.btn-wrapper {
    width: 90%;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
}
.timezone {
    width: 100%;
}
select:first-child {
    color: grey;
}
.save,
.cancel {
    width: 47%;
}
.cancel {
    background-color: gray;
}

/* Checkbox Toggle */
.checkbox {
    appearance: none;
    position: relative;
    width: 50px;
    height: 30px;
    border-radius: 25px;
    background-color: #ccc;
    transition: background .3s;
    outline: none;
    cursor: pointer;
}
.checkbox::after {
    content: '';
    position: absolute;
    top: 50%;
    left: 30%;
    transform: translate(-50%, -50%);
    border-radius: 50%;
    height: 1.25rem;
    width: 1.25rem;
    background: #fff;
    transition: left .3s;
}
.checkbox:checked {
    background: var(--primary-color);
}
.checkbox:checked::after {
    left: 70%;
}

/* Media Queries */
@media only screen and (min-width: 768px) {
        .grid-container {
            grid-template-columns: 55px 1fr;
            grid-template-areas: 
            "header header"
            "navigation main";
        }

        .nav {
            flex-direction: column;
            justify-content: flex-start;
            align-items: center;
            gap: 1.5rem;
        }
        .main {
            grid-template-columns: 50%;
        }

        .traffic, .social, .header-wrapper,
        .members, .activity, .message,
        .settings {
            grid-column: 1 / span 2;
        }
        .daily {
            grid-column: 1 / span 1;
        }
        .mobile {
            grid-column: 2 / span 1;
        }

        /* Main */
        .traffic-header {
            display: flex;
            justify-content: space-between;
            align-items: center;
        }
        .traffic-nav {
            margin-right: 2rem;
        }

        /* Graphs */
        .doughnut {
            border-left: 1px solid grey;
        }

        /* Socials */
        .social-container {
            display: flex;
            gap: 1rem;
            margin: 0 1rem;
        }

        /* Members */
        .members-wrapper {
            flex-direction: row;
            align-items: center;
            justify-content: flex-end;
            width: 95%;
            padding-bottom: 0;
        }
        .members-container {
            margin: 1rem 0;
        }
        .members-text {
            margin-right: auto;
            margin-left: 1rem;
            text-align: left;
        }

        /* Message */
        .widget-container {
            max-width: 95%; 
        }

        /* Settings */
        .toggle-container,
        .btn-wrapper {
            width: 95%;
        }
        .checkbox {
            width: 80px;
        }
        .checkbox::after {
            left: 20%;
        }
        .checkbox:checked::before {
            content: 'ON';
            color: white;
            position: absolute;
            top: 25%;
            left: 10%;
        }
        .checkbox:checked::after {
            left: 80%;
        }
        .email-toggle,
        .public-toggle {
            justify-content: flex-start;
            gap: 3rem;
        }
        .public-toggle {
            gap: 5rem;
        }

        .widget-container-full {
            width: 90vw;
        }
        .widget-container-half {
            width: 45vw;
        }
}

@media screen and (min-width: 1024px) {
    .members, .message {
        grid-column: 1 / span 1;
    }
    .activity, .settings {
        grid-column: 2 / span 1;
    }
    /* Main */
    .traffic-nav {
        margin-right: 3rem;
    }

    /* Recent */
    .activity,
    .settings {
        border-left: 1px solid grey;
    }

    /* Settings */
    .timezone {
        margin-top: .4rem;
    }
}

